Solved problem with checkout change address UX.

--- a/XOSkinWebApp/Views/Checkout/Index.cshtml
+++ b/XOSkinWebApp/Views/Checkout/Index.cshtml
@@ -254,6 +254,8 @@ else
           $('#calculated-shipping').val(false);
           $('#card-declined').val(false);
           $('#shipping-address-declined').val(false);
+          $('#same-address').attr('disabled', false);
+          $('#same-address').attr('readonly', true);
           break;
         case 'place-order-button':
           if (validateShippingAddress(e) == true && validateCreditCardInformation(e) == true) {
